Store uploads in Neon
